# forest

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  pretty.json
include/: avl.hpp  black_red.hpp  node_black_red.hpp  rotations.hpp  tree_example.hpp  user.hpp
include/forest/: tree.hpp  user.hpp
include/forest/trees/black_red/: black_red.hpp
include/forest/utils/: rotations.hpp
lib/nlohmann/: json.hpp
src/: main.cpp
tests/: CMakeLists.txt  avl_tests.cpp  black_red_test.cpp  rotations_test.cpp
tests/utils/: rotations_test.cpp
